fix(QInput/QSelect/QField): prefix and suffix breaks into multiple lines #4396

--- a/ui/src/components/field/field.styl
+++ b/ui/src/components/field/field.styl
@@ -114,6 +114,7 @@ $field-transition = .36s cubic-bezier(.4,0,.2,1)
       line-height 1em // needed for Chrome type="file"
   &__prefix, &__suffix
     transition opacity $field-transition
+    white-space nowrap
   &__prefix
     padding-right 4px
   &__suffix
